 * Fix: Fully remove the obsolete `wagtailsearch_editorspick` table that prevents flushing the database (Matt Westcott)
 * Fix: Update latest version message on Dashboard to accept dev build version format used on nlightly builds (Sam Moran)
 * Fix: references extraction for ChooserBlock (Alex Tomkins)
 * Fix: Regression in field width for authentication pages (log in / password reset) (Chisom)


4.0.4 (18.10.2022)
~~~~~~~~~~~~~~~~~~

 * Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
 * Update special-purpose `FieldPanel` deprecation message to add clarity for developers (Matt Westcott)
 * Fix: Add back rendering of `help_text` for InlinePanel (Matt Westcott)
 * Fix: Ensure that `AbstractForm` & `AbstractEmailForm` page models correctly pass the form to the preview context (Dan Bentley)
 * Fix: Use the correct custom font for the Wagtail userbar (Umar Farouk Yunusa)
 * Fix: Ensure that buttons on custom chooser widgets are correctly shown on hover (Thibaud Colas)


4.0.3 (18.10.2022)
~~~~~~~~~~~~~~~~~~

[release withdrawn due to packaging issues]


4.0.2 (23.09.2022)
~~~~~~~~~~~~~~~~~~

 * Update all images and sections of the Wagtail Editor's guide to align with the new admin interface changes from Wagtail 3.0 and 4.0 (Thibaud Colas)
 * Ensure all images in the documentation have a suitable alt text (Thibaud Colas)
 * Fix: Ensure tag autocompletion dropdown has a solid background (LB (Ben) Johnston)
 * Fix: Allow inline panels to be ordered (LB (Ben) Johnston)
 * Fix: Only show draft / live status tags on snippets that have `DraftStateMixin` applied (Sage Abdullah)
 * Fix: Prevent JS error when initialising chooser modals with no tabs (LB (Ben) Johnston)
 * Fix: Add missing vertical spacing between chooser modal header and body when there are no tabs (LB (Ben) Johnston)